Folder functionality complete
View, Delete, Rename

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 *.csv
 Granusoft/src/config.json
 Granusoft/src/view/screens/main/testing/__pycache__/TestFoldersScreen.cpython-39.pyc
+Granusoft/src/view/screens/main/testing/__pycache__/TestsScreen.cpython-39.pyc
+Granusoft/src/view/screens/main/testing/__pycache__/TestFoldersScreen.cpython-39.pyc
+Granusoft/src/config.json
