--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-
 *.csv
-Granusoft/src/config.json
-Granusoft/src/view/screens/main/testing/__pycache__/TestFoldersScreen.cpython-39.pyc
-Granusoft/src/view/screens/main/testing/__pycache__/TestsScreen.cpython-39.pyc
-Granusoft/src/view/screens/main/testing/__pycache__/TestFoldersScreen.cpython-39.pyc
-Granusoft/src/config.json
+*.pyc
+*.json
