--- a/Granusoft/src/config.json
+++ b/Granusoft/src/config.json
@@ -3,9 +3,9 @@
     "height": 95.5,
     "plot_num": 0,
     "barcode_scan": "OFF",
-    "height_sensor": "ON",
+    "height_sensor": "OFF",
     "folder": "carnegie",
-    "selected_folder": "carnegie",
+    "selected_folder": "UoI",
     "unwanted_folder": "NYU",
     "folders": [
         "carnegie",
