--- a/Granusoft/src/config.json
+++ b/Granusoft/src/config.json
@@ -3,9 +3,9 @@
     "height": 95.5,
     "plot_num": 0,
     "barcode_scan": "OFF",
-    "height_sensor": "ON",
+    "height_sensor": "OFF",
     "folder": "ASU",
-    "selected_folder": "NYU",
+    "selected_folder": "ASU",
     "unwanted_folder": "NYU",
     "folders": [
         "UoI",
@@ -18,6 +18,6 @@
         "bank": []
     },
     "break_height": "N/A",
-    "curr_test_num": 6,
+    "curr_test_num": 3,
     "sensors": {}
 }
