--- a/Granusoft/src/config.json
+++ b/Granusoft/src/config.json
@@ -1,19 +1,29 @@
 {
     "operator": 0,
-    "height": 0,
-    "plot_num": 0,
+    "height": 95.5,
+    "plot_num": 1,
     "barcode_scan": "OFF",
-    "height_sensor": "OFF",
-    "folder": "",
-    "selected_folder": "",
-    "unwanted_folder": "",
-    "folders": [],
+    "height_sensor": "ON",
+    "folder": "Test",
+    "selected_folder": "Test",
+    "unwanted_folder": "Test2",
+    "folders": [
+        "Test"
+    ],
     "notes": {
-        "pretest": [],
-        "posttest": [],
+        "pretest": [
+            "PrTN1",
+            "PrTN2",
+            "PrTN3"
+        ],
+        "posttest": [
+            "PsTN1",
+            "PsTN2",
+            "PsTN3"
+        ],
         "bank": []
     },
-    "break_height": "",
+    "break_height": "N/A",
     "curr_test_num": 1,
     "sensors": {}
 }
