--- a/Granusoft/src/config.json
+++ b/Granusoft/src/config.json
@@ -1,29 +1,238 @@
 {
-    "operator": 0,
-    "height": 95.5,
-    "plot_num": 1,
-    "barcode_scan": "ON",
-    "height_sensor": "ON",
-    "folder": "Test",
-    "selected_folder": "Test",
-    "unwanted_folder": "Test2",
+    "selected_folder": "Stalk 9 From SIDE",
+    "height": 83.5,
+    "height_sensor": "OFF",
+    "folder": "Stalk 9 From SIDE",
     "folders": [
-        "Test"
+        "Test",
+        "Test3",
+        "react",
+        "DEVICE",
+        "DEVICE2",
+        "testing oct 5",
+        "falafel",
+        "Iowa10-9",
+        "RyanJunk",
+        "Iowa10-10",
+        "Iowa10-11",
+        "Iowa10-18",
+        "Iowa10-20",
+        "falafel 4/17/24",
+        "falafel4-17-24",
+        "falafel4-29",
+        "6.21.24_FF_S",
+        "6.21.24_FF_NS",
+        "6.21.24_SQ_S",
+        "6.21.24_SQ_NS",
+        "6.21.24_PC_S",
+        "6.21.24_PC_NS",
+        "6.21.24_RY_S",
+        "6.21.24_RY_ NS",
+        "6.21.24_VR_ S",
+        "6.21.24_VR_NS",
+        "6.25.24_VR_S",
+        "6.25.24_VR_NS",
+        "6.25.24_RY_S",
+        "6.25.24_RY_NS",
+        "6.25.24_PC_S",
+        "6.25.24_PC_NS",
+        "6.25.24_SQ_S",
+        "6.25.24_SQ_NS",
+        "6.27.24_FF_S",
+        "6.27.24_FF_NS",
+        "6.27.24_SQ_S",
+        "6.27.24_SQ_NS",
+        "6.27.24_PC_S",
+        "6.27.24_PC_NS",
+        "6.27.24_VR_S",
+        "6.27.24_VR_NS",
+        "6.27.24_FF_S_V4",
+        "6.27.24_FF_NS_V4",
+        "6.27.24_FF_SQ_V4",
+        "6.27.24_SQ_NS_V4",
+        "6.27.24_PC_S_V4",
+        "6.27.24_PC_NS_V4",
+        "6.27.24_RY_NS_V4",
+        "6.27.24_RY_S_V4",
+        "6.27.24_VR_S_V4",
+        "6.27.24_VR_NS_V4",
+        "6.27.24_SQ_S_R2",
+        "7.01.24_SQ_S_R2",
+        "7.01.24_SQ_NS_R2",
+        "7.01.24_PC_S_R2",
+        "7.01.24_PC_NS_R2",
+        "7.01.24_RY_S_R2",
+        "7.01.24_RY_NS_R2",
+        "7.01.24_VR_S_R2",
+        "7.01.24_VR_NS_R2",
+        "7.10.24_RY_S_R2",
+        "7.10.24_RY_NS_R2",
+        "3rd-times-the-charm-flex-tests-10-24",
+        "flex_tests_oct28",
+        "TEST_RUN",
+        "MED_TESTS_RUN",
+        "MED_TESTS",
+        "LOW_STALK_1",
+        "LOW_STALK_2",
+        "LOW_STALK_3",
+        "LOW_STALK_4",
+        "LOW_STALK_5",
+        "LOW_STALK_6",
+        "LOW_STALK_7",
+        "LOW_STALK_8",
+        "LOW_STALK_9",
+        "Braxton Noise Tests",
+        "Flex Tests Medium",
+        "Flex Tests Wooden",
+        "Flex Tests Large",
+        "Flex Tests Medium Redo",
+        "Flex Tests Wooden Redos",
+        "Weights Flat 1",
+        "Weights Angle 1",
+        "Weights Angle 4.6 degrees",
+        "Weights Flat 2",
+        "Weights angle 4.6       -2",
+        "Stalk 9 From SIDE"
     ],
     "notes": {
         "pretest": [
-            "PrTN1",
-            "PrTN2",
-            "PrTN3"
+            "Stalk 9",
+            "10-20cm"
         ],
-        "posttest": [
-            "PsTN1",
-            "PsTN2",
-            "PsTN3"
+        "bank": [
+            "med pvc 1",
+            "med pvc 2",
+            "med pvc 3",
+            "med pvc 4",
+            "med pvc 5",
+            "med pvc 6",
+            "med pvc 8",
+            "w1",
+            "w2",
+            "w4",
+            "w5",
+            "w6",
+            "w7",
+            "w8",
+            "B",
+            "A",
+            "med pvc 7",
+            "with step",
+            "no stalk",
+            "Stalk 2",
+            "Stalk 3",
+            "Stalk 4",
+            "Stalk 5",
+            "Stalk 6",
+            "Stalk 7",
+            "Stalk 8",
+            "Stalk 1",
+            "With screwdrivers",
+            "Medium",
+            "Large",
+            "1",
+            "2",
+            "3",
+            "4",
+            "5",
+            "6",
+            "7",
+            "8",
+            "Wooden",
+            "9",
+            "With screwdrivers and weights",
+            "3500",
+            "med pvc 9",
+            "500",
+            "1000",
+            "1500",
+            "2000",
+            "2500",
+            "3000",
+            "0-10cm",
+            "5-15cm"
         ],
-        "bank": []
+        "posttest": []
     },
     "break_height": "N/A",
-    "curr_test_num": 11,
-    "sensors": {}
+    "sensors": {
+        "Pot Angle": {
+            "slope": 0.012320328542094448,
+            "points_list": [
+                [
+                    13695.0,
+                    0.0
+                ],
+                [
+                    21000.0,
+                    90.0
+                ]
+            ],
+            "intercept": -168.72689938398344
+        },
+        "Load Cell\nHeight": {
+            "slope": -0.008132040238539842,
+            "points_list": [
+                [
+                    8672.0,
+                    45.0
+                ],
+                [
+                    6976.0,
+                    60.0
+                ],
+                [
+                    5056.0,
+                    75.0
+                ],
+                [
+                    3168.0,
+                    90.0
+                ]
+            ],
+            "intercept": 116.03201614360577
+        },
+        "IMU Angle": {
+            "offset": 48.825
+        },
+        "Y Load": {
+            "slope": 1.2799672328388392,
+            "points_list": [
+                [
+                    2.5626,
+                    0.0
+                ],
+                [
+                    10.3753,
+                    10.0
+                ]
+            ],
+            "intercept": -3.2800440308728036
+        },
+        "X Load": {
+            "slope": 0.047961630695443645,
+            "points_list": [
+                [
+                    34.0,
+                    0.0
+                ],
+                [
+                    451.0,
+                    20.0
+                ]
+            ],
+            "intercept": -1.6306954436450816
+        }
+    },
+    "unwanted_folder": "Test2",
+    "prev_height": 0,
+    "plot_num": 1,
+    "curr_test_num": 420,
+    "test_notes": {
+        "pretest": [],
+        "bank": [],
+        "posttest": []
+    },
+    "barcode_scan": "OFF",
+    "operator": "Maeson"
 }
