Fixed equation in Sensor Header

--- a/Granusoft/src/config.json
+++ b/Granusoft/src/config.json
@@ -96,63 +96,12 @@
     ],
     "notes": {
         "pretest": [
-            "Stalk 9",
-            "10-20cm"
+            "Pre TEST"
         ],
-        "bank": [
-            "med pvc 1",
-            "med pvc 2",
-            "med pvc 3",
-            "med pvc 4",
-            "med pvc 5",
-            "med pvc 6",
-            "med pvc 8",
-            "w1",
-            "w2",
-            "w4",
-            "w5",
-            "w6",
-            "w7",
-            "w8",
-            "B",
-            "A",
-            "med pvc 7",
-            "with step",
-            "no stalk",
-            "Stalk 2",
-            "Stalk 3",
-            "Stalk 4",
-            "Stalk 5",
-            "Stalk 6",
-            "Stalk 7",
-            "Stalk 8",
-            "Stalk 1",
-            "With screwdrivers",
-            "Medium",
-            "Large",
-            "1",
-            "2",
-            "3",
-            "4",
-            "5",
-            "6",
-            "7",
-            "8",
-            "Wooden",
-            "9",
-            "With screwdrivers and weights",
-            "3500",
-            "med pvc 9",
-            "500",
-            "1000",
-            "1500",
-            "2000",
-            "2500",
-            "3000",
-            "0-10cm",
-            "5-15cm"
+        "posttest": [
+            "Post TEST"
         ],
-        "posttest": []
+        "bank": []
     },
     "break_height": "N/A",
     "sensors": {
@@ -226,8 +175,8 @@
     },
     "unwanted_folder": "Mail",
     "prev_height": 0,
-    "plot_num": 1,
-    "curr_test_num": 5,
+    "plot_num": 50,
+    "curr_test_num": 6,
     "test_notes": {
         "pretest": [],
         "bank": [],
