--- a/Granusoft/src/config.json
+++ b/Granusoft/src/config.json
@@ -96,12 +96,13 @@
     ],
     "notes": {
         "pretest": [
-            "Pre TEST"
+            "Pre test"
         ],
-        "posttest": [
+        "posttest": [],
+        "bank": [
+            "Hello my fried",
             "Post TEST"
-        ],
-        "bank": []
+        ]
     },
     "break_height": "N/A",
     "sensors": {
@@ -176,7 +177,7 @@
     "unwanted_folder": "Mail",
     "prev_height": 0,
     "plot_num": 50,
-    "curr_test_num": 6,
+    "curr_test_num": 22,
     "test_notes": {
         "pretest": [],
         "bank": [],
