--- a/Granusoft/src/config.json
+++ b/Granusoft/src/config.json
@@ -1,5 +1,5 @@
 {
-    "selected_folder": "Eric Test",
+    "selected_folder": "Tests_2022_06_23",
     "height": 83.5,
     "height_sensor": "OFF",
     "folder": "Eric Test",
@@ -91,7 +91,7 @@
         "Weights Flat 2",
         "Weights angle 4.6       -2",
         "Stalk 9 From SIDE",
-        "Eric Test"
+        "Eric Test 23"
     ],
     "notes": {
         "pretest": [
@@ -173,7 +173,7 @@
             "intercept": -1.6306954436450816
         }
     },
-    "unwanted_folder": "3rd-times-the-charm-flex-tests-10-24",
+    "unwanted_folder": "Tests_2022_03_04",
     "prev_height": 0,
     "plot_num": 50,
     "curr_test_num": 26,
